[package]
name = "ggrs-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
bytemuck = "1.13.0"
flate2 = "1.0.25"
ggrs = "0.9.3"
lazy_static = "1.4.0"
libc = "0.2.139"
pod = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
time = { version = "0.3", features = ["macros"] }
uuid =  { version = "1.3.0",features = ["v4","fast-rng","macro-diagnostics",] }
