[package]
name = "ggrs-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
bytemuck = "1.13.0"
flate2 = "1.0.25"
ggrs = "0.9.4"
libc = "0.2.139"
pod = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
uuid =  { version = "1.3.0",features = ["v4","fast-rng","macro-diagnostics",] }
macros = { version = "0.1.0", path = "../macros" }
matchbox_socket = { version = "0.6.1", features = ["ggrs"] }
futures = "0.3.28"
futures-timer = "3.0.2"
tokio = { version = "1.28.1", features = ["rt"] }
once_cell = "1.18.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

